[package]
name = "rustdns"
version = "0.1.0"
authors = ["Conblem <mail@conblem.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trust-dns-server = { version  = "0.19.2", features = ["dns-over-rustls"]}
trust-dns-resolver = "0.19.2"
tokio = { version = "0.2.1", features = ["macros"] }